# Rars-db

./: .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  readme.md  schema.sql  setup.cfg  setup.py  sim.py  test_data.json  test_data_simulation.json  test_data_single.json
env/: pip-selfcheck.json  pyvenv.cfg
env/Scripts/: Activate.ps1  activate  activate.bat
sample_ui/: README.md  package-lock.json  package.json
sample_ui/src/: main.js
sample_ui/src/components/: HelloWorld.vue
src/: app.py  db_methods.py  main.py
tests/: conftest.py  test_db_api.py
